--- a/home-page.html
+++ b/home-page.html
@@ -33,6 +33,7 @@
   </head>
   
   <body>
+    <align ="center" />
   <ul>
     <li><a href="#Scheduleaviewing">Schedule A Viewing</a></li>
     <li><a href="#application">Application</a></li>
