--- a/home-page.html
+++ b/home-page.html
@@ -34,7 +34,7 @@
   
   <body>
   <ul>
-    <li><a href="#Scheduleaviewing">Schedule A Viewing</a></li>
+    <li><a href="#schedule-a-viewing.html">Schedule A Viewing</a></li>
     <li><a href="#application">Application</a></li>
     <li><a href="#residentservices">Resident Services</a></li>
     <li><a href="#floorplans">Floor Plans</a></li>
