--- a/floor-plans.html
+++ b/floor-plans.html
@@ -19,6 +19,6 @@
   <footer>
     <p></p>
     Here is a link to
-    <a href="Homepage.html">Back To Home Page</a>
+    <a href="https://afosantos1.github.io/hello-html/home-page.html">Back To Home Page</a>
   </footer>
   </html>
