--- a/maintenance-request.html
+++ b/maintenance-request.html
@@ -21,7 +21,7 @@
    <footer>
     <p></p>
     Here is a link to
-    <a href="Homepage.html">Back To Home Page</a>
+    <a href="https://afosantos1.github.io/hello-html/home-page.html">Back To Home Page</a>
   </footer>
   </html>
 
