--- a/home-page.html
+++ b/home-page.html
@@ -34,10 +34,10 @@
   
   <body>
   <ul>
-    <li><a href="#schedule-a-viewing.html">Schedule A Viewing</a></li>
-    <li><a href="#application">Application</a></li>
-    <li><a href="#residentservices">Resident Services</a></li>
-    <li><a href="#floorplans">Floor Plans</a></li>
+    <li><a href="https://afosantos1.github.io/hello-html/schedule-a-viewing.html">Schedule A Viewing</a></li>
+    <li><a href="https://afosantos1.github.io/hello-html/applications.html">Application</a></li>
+    <li><a href="https://afosantos1.github.io/hello-html/resident-services.html">Resident Services</a></li>
+    <li><a href="https://afosantos1.github.io/hello-html/floor-plans.html">Floor Plans</a></li>
   </ul>
   <hr></hr>
     <h1>RASA PROPERTIES</h1>
