--- a/maintenance-request.html
+++ b/maintenance-request.html
@@ -12,10 +12,10 @@
   <a href="maintenancerequest"><img src="Images/request.pdf" /></a>
   <hr></hr>
   <p>If it is water work please visit the link below</p>
-  <a href="google.com">Water Work Problems</a>
+  <a href="https://www.google.com/?client=safari">Water Work Problems</a>
   <br></br>
   <p> If your problem is anything else besides water damage please visit the link below.</p>
-  <a href="google.com">Maintenance Problems</a>
+  <a href="https://www.google.com/?client=safari">Maintenance Problems</a>
   <br></br>
   <br></br>
    <footer>
