--- a/floor-plans.html
+++ b/floor-plans.html
@@ -15,7 +15,7 @@
   <p> 3 bedroom </p>
   <hr></hr>
   <p> The following website has more information on floor plans and pricing </p>
-  <a href="www.google.com">RASA Floor Plans and Pricing</a> 
+  <a href="https://www.google.com/?client=safari">RASA Floor Plans and Pricing</a> 
   <footer>
     <p></p>
     Here is a link to
