--- a/applications.html
+++ b/applications.html
@@ -12,7 +12,7 @@
     <table border="1" width="300" height="300">
     <tr>
     <td>
-    <a href="page1.html">How to Apply For an Appartment</a>
+    <a href="https://www.google.com/?client=safari">How to Apply For an Appartment</a>
     </td>
     <td>
   </body>
