--- a/maintenance-request.html
+++ b/maintenance-request.html
@@ -7,7 +7,7 @@
   </head>
   
   <body>
-  <h1><i>Maintenance Request</h1></i>
+  <h1>Maintenance Request</h1>
   <p>Maintenance requets should be requested if there are any problems in the apartment that need to be solved. The following form should be filled out for a maintenance request.</p>
   <a href="maintenancerequest"><img src="Images/request.pdf" /></a>
   <hr></hr>
