--- a/floor-plans.html
+++ b/floor-plans.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 
 <html>
-<body style="background-color:#2ECC71;">
-  <head>
-  <h1><u>Floor Plans</h1></u>
-  <p> Include 1 bedroom, 2 bedroom, and 3 bedroom </p>
-  <img src="https://i.pinimg.com/originals/40/0f/e4/400fe4dbc3905cf61f0b82b3e0258d3c.jpg" width="200" height="200" >
-  <p> 1 bedroom </p>
-  <hr></hr>
-  <img src="https://i.pinimg.com/originals/84/f9/71/84f9710dbdc09789ac2534369939a2f3.jpg" width="200" height="200" >
-  <p> 2 bedroom </p>
-  <hr></hr>
-  <img src="https://i.pinimg.com/originals/14/8d/46/148d468df183da6c6ab24d81e9f7491d.jpg" width="200" height="200" >
-  <p> 3 bedroom </p>
-  <hr></hr>
-  <p> The following website has more information on floor plans and pricing </p>
-  <a href="https://www.google.com/?client=safari">RASA Floor Plans and Pricing</a> 
+  <body style="background-color:#2ECC71;">
+    <head>
+      <title>My Website Titles</title>
+    </head>
+    
+  <body>
+      <h1><u>Floor Plans</h1></u>
+      <p> Include 1 bedroom, 2 bedroom, and 3 bedroom </p>
+      <img src="https://i.pinimg.com/originals/40/0f/e4/400fe4dbc3905cf61f0b82b3e0258d3c.jpg" width="200" height="200" >
+      <p> 1 bedroom </p>
+      <hr></hr>
+      <img src="https://i.pinimg.com/originals/84/f9/71/84f9710dbdc09789ac2534369939a2f3.jpg" width="200" height="200" >
+      <p> 2 bedroom </p>
+      <hr></hr>
+      <img src="https://i.pinimg.com/originals/14/8d/46/148d468df183da6c6ab24d81e9f7491d.jpg" width="200" height="200" >
+      <p> 3 bedroom </p>
+      <hr></hr>
+      <p> The following website has more information on floor plans and pricing </p>
+      <a href="https://www.google.com/?client=safari">RASA Floor Plans and Pricing</a> 
+  </body>
   <footer>
     <p></p>
     Here is a link to
