--- a/maintenance-request.html
+++ b/maintenance-request.html
@@ -6,22 +6,23 @@
     <title>My Website Titles</title>
   </head>
   
-  <body>
-  <h1>Maintenance Request</h1>
-  <p>Maintenance requets should be requested if there are any problems in the apartment that need to be solved. The following form should be filled out for a maintenance request.</p>
-  <a href="https://afosantos1.github.io/hello-html/resident-services.html"><img src="https://www.schoolservice.com/image/cache/data/FORM%2035A-1200x1200.jpg" width="300" height="300" ></a>
-  <hr></hr>
-  <p>If it is water work please visit the link below</p>
-  <a href="https://www.google.com/?client=safari">Water Work Problems</a>
-  <br></br>
-  <p> If your problem is anything else besides water damage please visit the link below.</p>
-  <a href="https://www.google.com/?client=safari">Maintenance Problems</a>
-  <br></br>
-  <br></br>
-   <footer>
-    <p></p>
-    Here is a link to
-    <a href="https://afosantos1.github.io/hello-html/home-page.html">Back To Home Page</a>
-  </footer>
+      <body>
+        <h1>Maintenance Request</h1>
+        <p>Maintenance requets should be requested if there are any problems in the apartment that need to be solved. The following form should be filled out for a maintenance request.</p>
+        <a href="https://afosantos1.github.io/hello-html/resident-services.html"><img src="https://www.schoolservice.com/image/cache/data/FORM%2035A-1200x1200.jpg" width="300" height="300" ></a>
+        <hr></hr>
+        <p>If it is water work please visit the link below</p>
+        <a href="https://www.google.com/?client=safari">Water Work Problems</a>
+        <br></br>
+        <p> If your problem is anything else besides water damage please visit the link below.</p>
+        <a href="https://www.google.com/?client=safari">Maintenance Problems</a>
+        <br></br>
+        <br></br>
+        <footer>
+        <p></p>
+        Here is a link to
+        <a href="https://afosantos1.github.io/hello-html/home-page.html">Back To Home Page</a>
+      </body>
+    </footer>
   </html>
 
