--- a/make-a-payment.html
+++ b/make-a-payment.html
@@ -7,26 +7,27 @@
   </head>
   
   <body>
-  <h1>Make a Payment</h1>
-  <hr></hr>
-  <p>Making payments is a very important part of our business. In order to keep your living space you must be all caught up with weekly and monthly payments</p>
+    <h1>Make a Payment</h1>
+    <hr></hr>
+    <p>Making payments is a very important part of our business. In order to keep your living space you must be all caught up with weekly and monthly payments</p>
   
-  <a href="https://www.thebalance.com/organize-your-bill-paying-process-3544879">Keep Your Payments Up To Date</a>
-  <hr></hr>
-  <p> Payment Methods:</p>
-  <p> Credit Card, Bank Account, Wire Transfer</p>
-   <img src= "http://medfinsrvcs.com/files/1835/Image/Make%20Payment.jpg" width= "200" height= "200">
-<br></br>
-<br></br>
-<br></br>
-<br></br>
+    <a href="https://www.thebalance.com/organize-your-bill-paying-process-3544879">Keep Your Payments Up To Date</a>
+    <hr></hr>
+    <p> Payment Methods:</p>
+    <p> Credit Card, Bank Account, Wire Transfer</p>
+    <img src= "http://medfinsrvcs.com/files/1835/Image/Make%20Payment.jpg" width= "200" height= "200">
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+  </body>
 
-<footer>
+  <footer>
     <p></p>
     Here is a link to
     <a href="https://afosantos1.github.io/hello-html/home-page.html">Back To Home Page</a>
   </footer>
-  </html>
+</html>
   
 
 
