--- a/resident-services.html
+++ b/resident-services.html
@@ -6,24 +6,25 @@
     <title>My Website Titles</title>
   </head>
   
-  <body>
-  <h2><u> Resident Services</h2></u>
-  <p> Click the Link Below if You Need to Place a Maintenance Request</p>
-  <a href="https://afosantos1.github.io/hello-html/maintenance-request.html">Book a Maintenance Request</a>
-  <p> If any problems are noticed in your home please request for a maintenance job to be done</p>
-  <hr></hr>
-  <br></br>
-  <p>Click the Link Below if You Need to Make a Payment</p>
-  <a href="https://afosantos1.github.io/hello-html/make-a-payment.html">Make a Payment</a>
-  <p>If any money is owed please be responsible with your payments or a phone call will be recieved.</p>
-  <br></br>
-  <br></br>
-  <br></br>
-  <br></br>
-  <br></br>
+    <body>
+      <h2><u> Resident Services</h2></u>
+      <p> Click the Link Below if You Need to Place a Maintenance Request</p>
+      <a href="https://afosantos1.github.io/hello-html/maintenance-request.html">Book a Maintenance Request</a>
+      <p> If any problems are noticed in your home please request for a maintenance job to be done</p>
+      <hr></hr>
+      <br></br>
+      <p>Click the Link Below if You Need to Make a Payment</p>
+      <a href="https://afosantos1.github.io/hello-html/make-a-payment.html">Make a Payment</a>
+      <p>If any money is owed please be responsible with your payments or a phone call will be recieved.</p>
+      <br></br>
+      <br></br>
+      <br></br>
+      <br></br>
+      <br></br>
+    </body
    <footer>
     <p></p>
     Here is a link to
     <a href="https://afosantos1.github.io/hello-html/home-page.html">Back To Home Page</a>
   </footer>
-  </html>
+</html>
