--- a/home-page.html
+++ b/home-page.html
@@ -30,7 +30,7 @@
       }
     </style>
     <title>My Website Titles</title>
-    <link rel="stylesheet" href="style
+    <link rel="stylesheet" href="style.css" />
   </head>
   
   <body>
