--- a/resident-services.html
+++ b/resident-services.html
@@ -4,6 +4,7 @@
 <body style="background-color:#2ECC71;">
   <head>
     <title>My Website Titles</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   
     <body>
