--- a/applications.html
+++ b/applications.html
@@ -9,6 +9,7 @@
   <body>
     <h2><u>Application</h2></u>
     <h6> Applying for your very own apartment </h6>
+    <table align="center">
     <table border="1" width="300" height="300">
       <tr>
       <td>
