--- a/home-page.html
+++ b/home-page.html
@@ -57,6 +57,7 @@
     
   </body>
   <footer>
+    <align ="center">
     <p></p>
     <a href="https://www.ucvts.tec.nj.us/">UCVTS Homepage</a>
     <p></p>
