--- a/schedule-a-viewing.html
+++ b/schedule-a-viewing.html
@@ -7,7 +7,7 @@
   </head>
   
     <body>
-      <h2><u>Schedule a Viewing</h2></u>
+      <h2><u><em>Schedule a Viewing</h2></u></em>
       <p><h4>Come Visit and Take a Look at our Beautiful Modern Living Spaces <hr /></h4> <br /> Locations include: Newark NJ, Cranford NJ, Sayerville NJ, Manhattan NY, New York NY</p>
       <p>Why Schedule a Viewing?</p>
       <ol>
