--- a/schedule-a-viewing.html
+++ b/schedule-a-viewing.html
@@ -9,7 +9,7 @@
     <body>
       <h2><u><em>Schedule a Viewing</h2></u></em>
       <p><h4>Come Visit and Take a Look at our Beautiful Modern Living Spaces <hr /></h4> <br /> Locations include: Newark NJ, Cranford NJ, Sayerville NJ, Manhattan NY, New York NY</p>
-      <p>Why Schedule a Viewing?</p>
+      <p align="left">Why Schedule a Viewing?</p>
       <ol>
         <li> Gives you the chance to meet one of our lovely staff members</li>
         <li> Gives you the chance to be able to see our apartment buildings in your local area</li>
