--- a/schedule-a-viewing.html
+++ b/schedule-a-viewing.html
@@ -12,8 +12,8 @@
       <p>Why Schedule a Viewing?</p>
       <ol>
         <li class="ita"> Gives you the chance to meet one of our lovely staff members</li>
-        <li> Gives you the chance to be able to see our apartment buildings in your local area</li>
-        <li> Allows you to think about our appartments before renting or buying</li>
+        <li class="ita"> Gives you the chance to be able to see our apartment buildings in your local area</li>
+        <li class="ita"> Allows you to think about our appartments before renting or buying</li>
       </ol>
         <br></br>
         <img src="https://www.maillie.com/sites/default/files/01_03_18_498023060_bb_560x292.jpg" alt="Italian Trulli" width="300" height="200">
