--- a/schedule-a-viewing.html
+++ b/schedule-a-viewing.html
@@ -11,7 +11,7 @@
       <p><h4>Come Visit and Take a Look at our Beautiful Modern Living Spaces <hr /></h4> <br /> Locations include: Newark NJ, Cranford NJ, Sayerville NJ, Manhattan NY, New York NY</p>
       <br></br>
       <p>Why Schedule a Viewing?</p>
-      <ol>
+      <ol class="por">
         <li class="ita"> Gives you the chance to meet one of our lovely staff members</li>
         <li class="ita"> Gives you the chance to be able to see our apartment buildings in your local area</li>
         <li class="ita"> Allows you to think about our appartments before renting or buying</li>
