--- a/home-page.html
+++ b/home-page.html
@@ -5,8 +5,8 @@
     <style type="text/css">
     ul{
       list-style-type: none;
-      margin: 0;
-      padding: 0;
+      margin: 15px;
+      padding: 15px;
       overflow: hidden;
     }
     a:link, a:visited{
@@ -25,7 +25,7 @@
       background-color: #7a991a
     }
       li{
-        float: left;
+        float: center;
       }
     </style>
     <title>My Website Titles</title>
