--- a/home-page.html
+++ b/home-page.html
@@ -39,7 +39,7 @@
        <li><a href="https://afosantos1.github.io/hello-html/resident-services.html">Resident Services</a></li>
        <li><a href="https://afosantos1.github.io/hello-html/floor-plans.html">Floor Plans</a></li>
     </ul>
-    <h1 align="right">RASA PROPERTIES</h1>
+    <h1 align="center">RASA PROPERTIES</h1>
     <hr></hr>
     <img src="http://static1.squarespace.com/static/54147deae4b00c34afd67953/t/5a1d9b5124a694106d0032d5/1568336808212/" width="120" height="135">
     <br></br>
