--- a/applications.html
+++ b/applications.html
@@ -7,7 +7,7 @@
     </head>
   
   <body>
-    <h1><u>Application</h1></u>
+    <h1 align="center"><u>Application</h1></u>
     <h2> Applying for your very own apartment </h2>
     <table align="center">
     <table border="1" width="300" height="300">
