--- a/make-a-payment.html
+++ b/make-a-payment.html
@@ -7,7 +7,7 @@
   </head>
   
   <body>
-    <h1><u>Make a Payment</h1></u>
+    <h1 align="center"><u>Make a Payment</h1></u>
     <hr></hr>
     <p>Making payments is a very important part of our business. In order to keep your living space you must be all caught up with weekly and monthly payments</p>
   
