--- a/resident-services.html
+++ b/resident-services.html
@@ -7,7 +7,7 @@
   </head>
   
     <body>
-      <h1><u> Resident Services</h1></u>
+      <h1 align="center"><u> Resident Services</h1></u>
       <p> Click the Link Below if You Need to Place a Maintenance Request</p>
       <a href="https://afosantos1.github.io/hello-html/maintenance-request.html">Book a Maintenance Request</a>
       <p> If any problems are noticed in your home please request for a maintenance job to be done</p>
