--- a/schedule-a-viewing.html
+++ b/schedule-a-viewing.html
@@ -8,7 +8,10 @@
   
     <body>
       <h1 align="center"><u>Schedule a Viewing</h1></u>
-      <p>Come Visit and Take a Look at our Beautiful Modern Living Spaces <hr /> <br /> Locations include: Newark NJ, Cranford NJ, Sayerville NJ, Manhattan NY, New York NY</p>
+      <p>Come Visit and Take a Look at our Beautiful Modern Living Spaces </p>
+      <hr></hr>
+      <br></br>
+      <p>Locations include: Newark NJ, Cranford NJ, Sayerville NJ, Manhattan NY, New York NY</p>
       <br></br>
       <p>Why Schedule a Viewing?</p>
       <ol class="por">
