--- a/applications.html
+++ b/applications.html
@@ -8,7 +8,7 @@
   
   <body>
     <h1 align="center"><u>Application</h1></u>
-    <h2> Applying for your very own apartment </h2>
+    <h2 class="bld"> Applying for your very own apartment </h2>
     <table align="center">
     <table border="1" width="300" height="300">
       <tr>
