--- a/floor-plans.html
+++ b/floor-plans.html
@@ -8,7 +8,7 @@
     
   <body>
       <h1 align="center"><u>Floor Plans</h1></u>
-      <p> Include 1 bedroom, 2 bedroom, and 3 bedroom </p>
+      <p class="urd"> Include 1 bedroom, 2 bedroom, and 3 bedroom </p>
       <img src="https://i.pinimg.com/originals/40/0f/e4/400fe4dbc3905cf61f0b82b3e0258d3c.jpg" width="200" height="200" >
       <p> 1 bedroom </p>
       <hr></hr>
