--- a/applications.html
+++ b/applications.html
@@ -9,8 +9,7 @@
   <body>
     <h1 align="center"><u>Application</h1></u>
     <h2 class="bld"> Applying for your very own apartment </h2>
-    <table align="center">
-    <table border="1" width="300" height="300">
+    <table align="center" border="1" width="300" height="300">
       <tr>
       <td>
       <a href="https://www.google.com/?client=safari">How to Apply For an Appartment</a>
