--- a/resident-services.html
+++ b/resident-services.html
@@ -14,7 +14,7 @@
       <hr></hr>
       <br></br>
       <p class="urd">Click the Link Below if You Need to Make a Payment</p>
-      <a align="center" href="https://afosantos1.github.io/hello-html/make-a-payment.html">Make a Payment</a>
+      <a href="https://afosantos1.github.io/hello-html/make-a-payment.html" style="text-align:center">Make a Payment</a>
       <p>If any money is owed please be responsible with your payments or a phone call will be recieved.</p>
       <br></br>
       <br></br>
