--- a/resident-services.html
+++ b/resident-services.html
@@ -9,12 +9,12 @@
     <body>
       <h1 align="center"><u> Resident Services</h1></u>
       <p class="urd"> Click the Link Below if You Need to Place a Maintenance Request</p>
-      <a href="https://afosantos1.github.io/hello-html/maintenance-request.html">Book a Maintenance Request</a>
+      <p><a href="https://afosantos1.github.io/hello-html/maintenance-request.html">Book a Maintenance Request</a></p>
       <p> If any problems are noticed in your home please request for a maintenance job to be done</p>
       <hr></hr>
       <br></br>
       <p class="urd">Click the Link Below if You Need to Make a Payment</p>
-      <a href="https://afosantos1.github.io/hello-html/make-a-payment.html">Make a Payment</a>
+      <p><a href="https://afosantos1.github.io/hello-html/make-a-payment.html">Make a Payment</a></p>
       <p>If any money is owed please be responsible with your payments or a phone call will be recieved.</p>
       <br></br>
       <br></br>
