--- a/floor-plans.html
+++ b/floor-plans.html
@@ -9,14 +9,14 @@
   <body>
       <h1 align="center"><u>Floor Plans</h1></u>
       <p class="urd"> Include 1 bedroom, 2 bedroom, and 3 bedroom </p>
-      <img src="https://i.pinimg.com/originals/40/0f/e4/400fe4dbc3905cf61f0b82b3e0258d3c.jpg" width="200" height="200" >
-      <p> 1 bedroom </p>
+      <img src="https://i.pinimg.com/originals/40/0f/e4/400fe4dbc3905cf61f0b82b3e0258d3c.jpg" width="100" height="400" >
+      <p id="intro"> 1 bedroom </p>
       <hr></hr>
-      <img src="https://i.pinimg.com/originals/84/f9/71/84f9710dbdc09789ac2534369939a2f3.jpg" width="200" height="200" >
-      <p> 2 bedroom </p>
+      <img src="https://i.pinimg.com/originals/84/f9/71/84f9710dbdc09789ac2534369939a2f3.jpg" width="100" height="400" >
+      <p id="dwn"> 2 bedroom </p>
       <hr></hr>
-      <img src="https://i.pinimg.com/originals/14/8d/46/148d468df183da6c6ab24d81e9f7491d.jpg" width="200" height="200" >
-      <p> 3 bedroom </p>
+      <img src="https://i.pinimg.com/originals/14/8d/46/148d468df183da6c6ab24d81e9f7491d.jpg" width="100" height="400" >
+      <p id="top"> 3 bedroom </p>
       <hr></hr>
       <p> The following website has more information on floor plans and pricing </p>
       <a href="https://www.google.com/?client=safari">RASA Floor Plans and Pricing</a> 
