--- a/maintenance-request.html
+++ b/maintenance-request.html
@@ -12,10 +12,10 @@
         <a href="https://afosantos1.github.io/hello-html/resident-services.html"><img src="https://www.schoolservice.com/image/cache/data/FORM%2035A-1200x1200.jpg" width="300" height="300" ></a>
         <hr></hr>
         <p>If it is water work please visit the link below</p>
-        <a href="https://www.google.com/?client=safari">Water Work Problems</a>
+        <p><a href="https://www.google.com/?client=safari">Water Work Problems</a></p>
         <br></br>
         <p> If your problem is anything else besides water damage please visit the link below.</p>
-        <a href="https://www.google.com/?client=safari">Maintenance Problems</a>
+        <p><a href="https://www.google.com/?client=safari">Maintenance Problems</a></p>
         <br></br>
         <br></br>
         <footer>
