--- a/maintenance-request.html
+++ b/maintenance-request.html
@@ -8,7 +8,7 @@
   
       <body>
         <h1 align="center"><u>Maintenance Request</h1></u>
-        <p>Maintenance requets should be requested if there are any problems in the apartment that need to be solved. The following form should be filled out for a maintenance request.</p>
+        <p class="bld">Maintenance requets should be requested if there are any problems in the apartment that need to be solved. The following form should be filled out for a maintenance request.</p>
         <a href="https://afosantos1.github.io/hello-html/resident-services.html"><img src="https://www.schoolservice.com/image/cache/data/FORM%2035A-1200x1200.jpg" width="300" height="300" ></a>
         <hr></hr>
         <p>If it is water work please visit the link below</p>
