--- a/make-a-payment.html
+++ b/make-a-payment.html
@@ -11,7 +11,7 @@
     <hr></hr>
     <p>Making payments is a very important part of our business. In order to keep your living space you must be all caught up with weekly and monthly payments</p>
   
-    <a href="https://www.thebalance.com/organize-your-bill-paying-process-3544879">Keep Your Payments Up To Date</a>
+    <p><a href="https://www.thebalance.com/organize-your-bill-paying-process-3544879">Keep Your Payments Up To Date</a></p>
     <hr></hr>
     <p> Payment Methods:</p>
     <p> Credit Card, Bank Account, Wire Transfer</p>
