--- a/floor-plans.html
+++ b/floor-plans.html
@@ -19,7 +19,7 @@
       <p id="top"> 3 bedroom </p>
       <hr></hr>
       <p> The following website has more information on floor plans and pricing </p>
-      <a href="https://www.google.com/?client=safari">RASA Floor Plans and Pricing</a> 
+      <p><a href="https://www.google.com/?client=safari">RASA Floor Plans and Pricing</a></p>
   </body>
   <footer>
     <p></p>
